<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="@dimen/item_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="12dp"
        app:cardMaxElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending1" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_game_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        android:layout_marginLeft="@dimen/defailt_margin"
        style="@style/TitleTextStyle"/>

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        android:layout_marginRight="@dimen/defailt_margin"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <TextView
        android:id="@+id/popup_game_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defailt_margin"
        android:text="@string/popup_game_description_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        style="@style/TitleTextStyle"/>

    <TextView
        android:id="@+id/popup_game_description_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_game_description_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_game_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_game_description_title"
        style="@style/DefaultTextStyle"/>

    <TextView
        android:id="@+id/popup_game_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_game_type_title"
        android:layout_marginTop="@dimen/defailt_margin"
        app:layout_constraintStart_toStartOf="@+id/popup_game_description_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_game_description_subtitle"
        style="@style/TitleTextStyle"/>

    <TextView
        android:id="@+id/popup_game_type_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_game_type_subtitle"
        style="@style/DefaultTextStyle"
        app:layout_constraintStart_toStartOf="@+id/popup_game_type_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_game_type_title" />



    <TextView
        android:id="@+id/popup_game_support_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_game_support_title"
        android:layout_marginTop="@dimen/defailt_margin"
        app:layout_constraintStart_toStartOf="@+id/popup_game_type_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_game_type_subtitle"
        style="@style/TitleTextStyle"/>

    <TextView
        android:id="@+id/popup_game_support_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_game_support_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_game_support_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_game_support_title"
        style="@style/DefaultTextStyle"
        tools:ignore="UnknownId" />

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_game_support_subtitle"/>

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_trash"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation"/>

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_unstar"
        android:layout_marginLeft="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />


</androidx.constraintlayout.widget.ConstraintLayout>